--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/utills.css">
     <link rel="stylesheet" href="assets/css/sections.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/skillset.css">
 </head>
 <body>
     <div class="menu">
@@ -28,35 +30,48 @@
         <h1>Marcelo Garita Fonseca</h1>
         <hr>
         <h3>System Engineer</h3>
+        <video autoplay loop muted>
+            <source src="assets/img/hero.mp4">
+        </video>
     </section>
     <main>
         <section class="Portfolio">
             <H2 class="subtitulo">Portfolio</H2>
             <hr>
             <figure>
-                <img src="" alt="imagen de referencia">
-                <p>description del trabajo</p>
+                <img src="assets/img/proyecto1.jpg" alt="imagen de referencia">
+                <div class="info">
+                    <h4>Catalogo en Linea</h4>
+                    <p>Catalogo y CRUD de productos en linea</p>
+                    <button><a href="https://github.com/marcelogaritaf/catalogo-en-linea/tree/main">Learn more</a></button>
+                </div>
             </figure>
         </section>
         <section class="Skillset">
             <H2 class="subtitulo">Skillset</H2>
             <hr>
-            <figure>
-                <p>HTML</p>
-                <img src="assets/img/html.png" alt="imagen de referencia">
-            </figure>
-            <figure>
-                <p>CSS</p>
-                <img src="assets/img/css.png" alt="imagen de referencia">
-            </figure>
-            <figure>
-                <p>Javascript</p>
-                <img src="assets/img/js.jpg" alt="imagen de referencia">
-            </figure>
-            <figure>
-                <p>REACT</p>
-                <img src="assets/img/react.jpg" alt="imagen de referencia">
-            </figure>
+            <div class="skills">
+                <figure>
+                    <p>HTML</p>
+                    <img src="assets/img/html.svg" alt="imagen de referencia">
+                </figure>
+                <figure>
+                    <p>CSS</p>
+                    <img src="assets/img/css.svg" alt="imagen de referencia">
+                </figure>
+                <figure>
+                    <p>Javascript</p>
+                    <img src="assets/img/js.svg" alt="imagen de referencia">
+                </figure>
+                <figure>
+                    <p>REACT</p>
+                    <img src="assets/img/react.svg" alt="imagen de referencia">
+                </figure>
+                <figure>
+                    <p>git</p>
+                    <img src="assets/img/git.svg" alt="imagen de referencia">
+                </figure>
+            </div>
         </section>
         <section class="Contact">
             <H2 class="subtitulo">Contact</H2>
