contact part and changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/sections.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/skillset.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
 </head>
 <body>
     <div class="menu">
@@ -77,11 +78,11 @@
             <H2 class="subtitulo">Contact</H2>
             <hr>
             <form action="#">
-                <label>Email</label><br>
-                <input type="text" placeholder="email"><br>
-                <label>Mensaje</label><br>
-                <input type="text" placeholder="mensaje"><br>
-                <button>Enviar</button>
+                <label>Email:</label>
+                <input type="text" placeholder="Email"><br>
+                <label>Message:</label>
+                <textarea type="text" placeholder="Message"></textarea><br>
+                <button>Send</button>
             </form> 
             <a href=""><i class="fa-brands fa-linkedin"></i></a>
             <a href=""><i class="fa-brands fa-github"></i></a>
