add new proyect

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
                     <button><a href="https://github.com/marcelogaritaf/catalogo-en-linea/tree/main">Learn more</a></button>
                 </div>
             </figure>
+            <figure>
+                <img src="assets/img/proyecto2.jpg" alt="imagen de referencia">
+                <div class="info">
+                    <h4>Consumo de Api</h4>
+                    <p>Consumo de la api de rick and morty</p>
+                    <button><a href="https://github.com/marcelogaritaf/api-app-react">Learn more</a></button>
+                </div>
+            </figure>
         </section>
         <section class="Skillset">
             <H2 class="subtitulo">Skillset</H2>
