--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <body>
     <div class="menu">
         <nav>
-            <a href="#Portfolio">Portfolio</a>
-            <a href="#Skillset">Skillset</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#skillset">Skillset</a>
             <a href="#">Expirence</a>
-            <a href="#Contact">Contact</a>
+            <a href="#contact">Contact</a>
         </nav>
     </div>
     <section class="header">
@@ -37,7 +37,7 @@
         </video>
     </section>
     <main>
-        <section class="Portfolio">
+        <section class="Portfolio" id="portfolio">
             <H2 class="subtitulo">Portfolio</H2>
             <hr>
             <figure>
@@ -57,7 +57,7 @@
                 </div>
             </figure>
         </section>
-        <section class="Skillset">
+        <section class="Skillset" id="skillset">
             <H2 class="subtitulo">Skillset</H2>
             <hr>
             <div class="skills">
@@ -83,7 +83,7 @@
                 </figure>
             </div>
         </section>
-        <section class="Contact">
+        <section class="Contact" id="contact">
             <H2 class="subtitulo">Contact</H2>
             <hr>
             <form action="#">
@@ -93,9 +93,12 @@
                 <textarea type="text" placeholder="Message"></textarea><br>
                 <button>Send</button>
             </form> 
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href=""><i class="fa-brands fa-github"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <div class="redes">
+                <a href="" class="linkedin"><img src="assets/img/linkedin.svg" alt=""></a>
+                <a href="" class="github"><img src="assets/img/square-github.svg" alt=""></a>
+                <a href="" class="instagram"><img src="assets/img/square-instagram.svg" alt=""></a>
+
+            </div>
         </section>
 
     </main>
