--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                 <button>Send</button>
             </form> 
             <div class="redes">
-                <a href="" class="linkedin"><img src="assets/img/linkedin.svg" alt=""></a>
-                <a href="" class="github"><img src="assets/img/square-github.svg" alt=""></a>
-                <a href="" class="instagram"><img src="assets/img/square-instagram.svg" alt=""></a>
+                <a href="" id="linkedin"><img src="assets/img/linkedin-svgrepo-com (1).svg" alt=""></a>
+                <a href="" class="github"><img src="assets/img/github-svgrepo-com (2).svg" alt=""></a>
+                <a href="" class="instagram"><img src="assets/img/instagram-rounded-svgrepo-com.svg" alt=""></a>
 
             </div>
         </section>
