--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <nav>
             <a href="#portfolio">Portfolio</a>
             <a href="#skillset">Skillset</a>
-            <a href="#">Expirence</a>
             <a href="#contact">Contact</a>
         </nav>
     </div>
@@ -71,7 +70,7 @@
                 </figure>
                 <figure>
                     <p>Javascript</p>
-                    <img src="assets/img/js.svg" alt="imagen de referencia">
+                    <img src="assets/img/javascript-svgrepo-com.svg" alt="imagen de referencia">
                 </figure>
                 <figure>
                     <p>REACT</p>
@@ -94,9 +93,9 @@
                 <button>Send</button>
             </form> 
             <div class="redes">
-                <a href="" id="linkedin"><img src="assets/img/linkedin-svgrepo-com (1).svg" alt=""></a>
-                <a href="" class="github"><img src="assets/img/github-svgrepo-com (2).svg" alt=""></a>
-                <a href="" class="instagram"><img src="assets/img/instagram-rounded-svgrepo-com.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/marcelo-garita-fonseca-65513926a/" id="linkedin"><img src="assets/img/linkedin-svgrepo-com (1).svg" alt=""></a>
+                <a href="https://github.com/marcelogaritaf" class="github"><img src="assets/img/github-svgrepo-com (2).svg" alt=""></a>
+                <a href="https://www.instagram.com/_marcelogarita/" class="instagram"><img src="assets/img/instagram-rounded-svgrepo-com.svg" alt=""></a>
 
             </div>
         </section>
