adding new proyect

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                     <button><a href="https://github.com/marcelogaritaf/api-app-react">Learn more</a></button>
                 </div>
             </figure>
+            <figure>
+                <img src="assets/img/proyecto3.jpg" alt="imagen de referencia">
+                <div class="info">
+                    <h4>Newsletter sign-up form with success message</h4>
+                    <p>Frontend mentor challenge sign-up form</p>
+                    <button><a href="https://frontend-challenge-mgf.netlify.app/">Learn more</a></button>
+                </div>
+            </figure>
         </section>
         <section class="Skillset" id="skillset">
             <H2 class="subtitulo">Skillset</H2>
