--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
                     <button><a href="https://interactive-form-mgf.netlify.app/">Learn more</a></button>
                 </div>
             </figure>
+            <figure class="seis">
+                <img src="assets/img/proyecto6.jpg" alt="imagen de referencia">
+                <div class="info">
+                    <h4>Sistema de seguimiento de compras</h4>
+                    <p>Sistema para el departamento de compras del Poder Judicial</p>
+                    <button><a href="https://github.com/marcelogaritaf/frondendSistema/">Learn more</a></button>
+                </div>
+            </figure>
         </section>
         <section class="Skillset" id="skillset">
             <H2 class="subtitulo">Skillset</H2>
@@ -99,6 +107,10 @@
                 <figure>
                     <p>REACT</p>
                     <img src="assets/img/react.svg" alt="imagen de referencia">
+                </figure>
+                <figure>
+                    <p>Angular</p>
+                    <img src="assets/img/angular-svgrepo-com.svg" alt="imagen de referencia">
                 </figure>
                 <figure>
                     <p>git</p>
