--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </figure>
             <figure class="seis">
-                <img src="assets/img/proyecto6.jpg" alt="imagen de referencia">
+                <img src="assets/img/unnamed.png" alt="imagen de referencia">
                 <div class="info">
                     <h4>Sistema de seguimiento de compras</h4>
                     <p>Sistema para el departamento de compras del Poder Judicial</p>
