--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </div>
     <section class="header">
-        <img class="foto" src="assets/img/backnav.jpg" alt="imagen de referencia">
+        <img class="foto" src="assets/img/icon.jpg" alt="imagen de referencia">
         <h1>Marcelo Garita Fonseca</h1>
         <hr>
         <h3>System Engineer</h3>
@@ -39,54 +39,115 @@
         <section class="Portfolio" id="portfolio">
             <H2 class="subtitulo">Portfolio</H2>
             <hr>
-            <figure class="uno">
-                <img src="assets/img/proyecto1.jpg" alt="imagen de referencia">
-                <div class="info">
-                    <h4>Catalogo en Linea</h4>
-                    <p>Catalogo y CRUD de productos en linea</p>
-                    <button><a href="https://github.com/marcelogaritaf/catalogo-en-linea/tree/main">Learn more</a></button>
+            <div class="main-content">
+                <div class="card-1">
+                    <div class="bg">
+                        <div class="img-header">
+                            <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
+                        </div>
+                        <div class="info">
+                            <p class="title">University work Inventory System</p>
+                            <p>An inventory system has been developed using HTML, CSS, JavaScript, and PHP as part of a university project. The aim is to enhance the
+                                 management of products for a fictional store, 
+                                 ensuring efficient control and organization.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#HTML #CSS #JAVASCRIPT #PHP</p>
+                            <button type="button" class="action"><a href="https://github.com/marcelogaritaf/catalogo-en-linea/tree/main">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
                 </div>
-            </figure>
-            <figure class="dos">
-                <img src="assets/img/proyecto2.jpg" alt="imagen de referencia">
-                <div class="info">
-                    <h4>Consumo de Api</h4>
-                    <p>Consumo de la api de rick and morty</p>
-                    <button><a href="https://github.com/marcelogaritaf/api-app-react">Learn more</a></button>
+                <div class="card-1">
+                    <div class="bg">
+                        <div class="img-header pTwo"></div>
+                        <div class="info">
+                            <p class="title">Rick and Morty api application </p>
+                            <p>An application has been developed using React.js and the Rick and Morty API. 
+                                This application allows users to search for characters by their names.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#React.JS #CSS #JAVASCRIPT</p>
+                            <button type="button" class="action"><a href="https://appi-react-example.netlify.app/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
                 </div>
-            </figure>
-            <figure class="tres">
-                <img src="assets/img/proyecto3.jpg" alt="imagen de referencia">
-                <div class="info">
-                    <h4>Newsletter sign-up form with success message</h4>
-                    <p>Frontend mentor challenge sign-up form</p>
-                    <button><a href="https://frontend-challenge-mgf.netlify.app/">Learn more</a></button>
+                <div class="card-1">
+                    <div class="bg">
+                        <div class="img-header pThree">
+                            <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
+                        </div>
+                        <div class="info">
+                            <p class="title">NEWSLETTER SIGN-UP FORM WITH SUCCESS MESSAGE</p>
+                            <p>A solution to a Frontend Mentor challenge has been developed using HTML, CSS, and JavaScript. 
+                                The challenge involves registering your email in the input field, and the solution provides a success message.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#HTML #CSS #JAVASCRIPT</p>
+                            <button type="button" class="action"><a href="https://frontend-challenge-mgf.netlify.app/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
                 </div>
-            </figure>
-            <figure class="cuatro">
-                <img src="assets/img/proyecto4.jpg.png" alt="imagen de referencia">
-                <div class="info">
-                    <h4>Blog homepage</h4>
-                    <p>Frontend mentor challenge News homepage</p>
-                    <button><a href="https://mgf-news-blog.netlify.app/">Learn more</a></button>
+                <div class="card-1">
+                    <div class="bg">
+                        <div class="img-header pFour">
+                            <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
+                        </div>
+                        <div class="info">
+                            <p class="title">Blog homepage</p>
+                            <p>A solution to a Frontend Mentor challenge has been developed using HTML, CSS, and JavaScript. The challenge involves a single page 
+                                about the future of web 3.0 and provides additional news about the future of technology in other fields.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#HTML #CSS #JAVASCRIPT</p>
+                            <button type="button" class="action"><a href="https://mgf-news-blog.netlify.app/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
                 </div>
-            </figure>
-            <figure class="cinco">
-                <img src="assets/img/proyecto5.png" alt="imagen de referencia">
-                <div class="info">
-                    <h4>Interactive card details form</h4>
-                    <p>Frontend mentor challenge about interactive card details form</p>
-                    <button><a href="https://interactive-form-mgf.netlify.app/">Learn more</a></button>
+                <div class="card-1">
+                    <div class="bg">
+                        <div class="img-header pFive">
+                            <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
+                        </div>
+                        <div class="info">
+                            <p class="title">INTERACTIVE CARD DETAILS FORM</p>
+                            <p>A solution to a Frontend Mentor challenge has been developed using HTML, CSS, and JavaScript.
+                                The challenge involves writting your credit card data, and the solution provides a success message.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#HTML #CSS #JAVASCRIPT</p>
+                            <button type="button" class="action"><a href="https://interactive-form-mgf.netlify.app/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
                 </div>
-            </figure>
-            <figure class="seis">
-                <img src="assets/img/unnamed.png" alt="imagen de referencia">
-                <div class="info">
-                    <h4>Sistema de seguimiento de compras</h4>
-                    <p>Sistema para el departamento de compras del Poder Judicial</p>
-                    <button><a href="https://github.com/marcelogaritaf/frondendSistema/">Learn more</a></button>
+                <div class="card-1">
+                    <div class="bg">
+                        <div class="img-header pSix">
+                            <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
+                        </div>
+                        <div class="info">
+                            <p class="title">University Professional Practice</p>
+                            <p>A system for Poder Judicial de Costa Rica in the Department of Purchases has been developed using Angular, .NET, SQL Server, and CSS.
+                                The system is designed to provide a solution aimed at increasing efficiency in their work processes.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#Angular #CSS #JAVASCRIPT #.Net #SqlServer</p>
+                            <button type="button" class="action"><a href="https://github.com/marcelogaritaf/frondendSistema/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
                 </div>
-            </figure>
+            </div>
         </section>
         <section class="Skillset" id="skillset">
             <H2 class="subtitulo">Skillset</H2>
@@ -111,6 +172,10 @@
                 <figure>
                     <p>Angular</p>
                     <img src="assets/img/angular-svgrepo-com.svg" alt="imagen de referencia">
+                </figure>
+                <figure>
+                    <p>SqlServer</p>
+                    <img src="assets/img/sql-svgrepo-com (1).svg" alt="imagen de referencia">
                 </figure>
                 <figure>
                     <p>git</p>
