--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <H2 class="subtitulo">Portfolio</H2>
             <hr>
             <div class="main-content">
-                <div class="card-1">
+                <div class="card-1 uno">
                     <div class="bg">
                         <div class="img-header">
                             <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
@@ -59,7 +59,7 @@
                     </div>
                     <div class="blob"></div>
                 </div>
-                <div class="card-1">
+                <div class="card-1 dos">
                     <div class="bg">
                         <div class="img-header pTwo"></div>
                         <div class="info">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="blob"></div>
                 </div>
-                <div class="card-1">
+                <div class="card-1 tres">
                     <div class="bg">
                         <div class="img-header pThree">
                             <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
@@ -93,7 +93,7 @@
                     </div>
                     <div class="blob"></div>
                 </div>
-                <div class="card-1">
+                <div class="card-1 cuatro">
                     <div class="bg">
                         <div class="img-header pFour">
                             <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
@@ -111,7 +111,7 @@
                     </div>
                     <div class="blob"></div>
                 </div>
-                <div class="card-1">
+                <div class="card-1 cinco">
                     <div class="bg">
                         <div class="img-header pFive">
                             <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
@@ -129,7 +129,7 @@
                     </div>
                     <div class="blob"></div>
                 </div>
-                <div class="card-1">
+                <div class="card-1 seis">
                     <div class="bg">
                         <div class="img-header pSix">
                             <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
@@ -153,31 +153,31 @@
             <H2 class="subtitulo">Skillset</H2>
             <hr>
             <div class="skills">
-                <figure>
+                <figure class="uno">
                     <p>HTML</p>
                     <img src="assets/img/html.svg" alt="imagen de referencia">
                 </figure>
-                <figure>
+                <figure class="dos">
                     <p>CSS</p>
                     <img src="assets/img/css.svg" alt="imagen de referencia">
                 </figure>
-                <figure>
+                <figure class="tres">
                     <p>Javascript</p>
                     <img src="assets/img/javascript-svgrepo-com.svg" alt="imagen de referencia">
                 </figure>
-                <figure>
+                <figure class="cuatro">
                     <p>REACT</p>
                     <img src="assets/img/react.svg" alt="imagen de referencia">
                 </figure>
-                <figure>
+                <figure class="cinco">
                     <p>Angular</p>
                     <img src="assets/img/angular-svgrepo-com.svg" alt="imagen de referencia">
                 </figure>
-                <figure>
+                <figure class="seis">
                     <p>SqlServer</p>
                     <img src="assets/img/sql-svgrepo-com (1).svg" alt="imagen de referencia">
                 </figure>
-                <figure>
+                <figure class="siete">
                     <p>git</p>
                     <img src="assets/img/git.svg" alt="imagen de referencia">
                 </figure>
