--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
                     <p>git</p>
                     <img src="assets/img/git.svg" alt="imagen de referencia">
                 </figure>
+                <figure class="ocho">
+                    <p>Typescript</p>
+                    <img src="assets/img/typescript-svgrepo-com.svg" alt="imagen de referencia">
+                </figure>
+                <figure class="nueve">
+                    <p>Bootstrap</p>
+                    <img src="assets/img/bootstrap-svgrepo-com.svg" alt="imagen de referencia">
+                </figure>
+                <figure class="diez">
+                    <p>Chakra UI</p>
+                    <img src="assets/img/ray-black-shape-svgrepo-com.svg" alt="imagen de referencia">
+                </figure>
             </div>
         </section>
         <section class="Contact" id="contact">
