adding new proyect and fixing

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </div>
     <section class="header">
-        <img class="foto" src="assets/img/icon.jpg" alt="imagen de referencia">
+        <img class="foto" src="assets/img/logo.jpg" alt="imagen de referencia">
         <h1>Marcelo Garita Fonseca</h1>
         <hr>
         <h3>System Engineer</h3>
@@ -55,6 +55,40 @@
                             <div class="footer">
                             <p class="tag">#HTML #CSS #JAVASCRIPT #PHP</p>
                             <button type="button" class="action"><a href="https://github.com/marcelogaritaf/catalogo-en-linea/tree/main">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
+                </div>
+                <div class="card-1 seis">
+                    <div class="bg">
+                        <div class="img-header pSix">
+                            <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
+                        </div>
+                        <div class="info">
+                            <p class="title">University Professional Practice</p>
+                            <p>A system for Poder Judicial de Costa Rica in the Department of Purchases has been developed using Angular, .NET, SQL Server, and CSS.
+                                The system is designed to provide a solution aimed at increasing efficiency in their work processes.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#Angular #CSS #JAVASCRIPT #.Net #SqlServer</p>
+                            <button type="button" class="action"><a href="https://github.com/marcelogaritaf/frondendSistema/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
+                </div>
+                <div class="card-1 dos">
+                    <div class="bg">
+                        <div class="img-header pTwo-2"></div>
+                        <div class="info">
+                            <p class="title">Game Hub application</p>
+                            <p>An application has been developed using React.js, Chakra UI, and the Rawg API as a copy of the Rawg game page. 
+                                It displays all the games and genres, filtered by platforms and relevance.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#React.JS #CSS #TYPESCRIPT #Chakra UI</p>
+                            <button type="button" class="action"><a href="https://react-proyect-drab.vercel.app/">Learn more!</a></button>
                             </div>
                     </div>
                     <div class="blob"></div>
@@ -128,25 +162,7 @@
                             </div>
                     </div>
                     <div class="blob"></div>
-                </div>
-                <div class="card-1 seis">
-                    <div class="bg">
-                        <div class="img-header pSix">
-                            <!-- <img src="assets/img/proyecto1.jpg" alt="imagen de referencia"> -->
-                        </div>
-                        <div class="info">
-                            <p class="title">University Professional Practice</p>
-                            <p>A system for Poder Judicial de Costa Rica in the Department of Purchases has been developed using Angular, .NET, SQL Server, and CSS.
-                                The system is designed to provide a solution aimed at increasing efficiency in their work processes.
-                            </p>
-                            </div>
-                            <div class="footer">
-                            <p class="tag">#Angular #CSS #JAVASCRIPT #.Net #SqlServer</p>
-                            <button type="button" class="action"><a href="https://github.com/marcelogaritaf/frondendSistema/">Learn more!</a></button>
-                            </div>
-                    </div>
-                    <div class="blob"></div>
-                </div>
+                </div>      
             </div>
         </section>
         <section class="Skillset" id="skillset">
