adding rest country app project

--- a/index.html
+++ b/index.html
@@ -40,6 +40,40 @@
             <H2 class="subtitulo">Portfolio</H2>
             <hr>
             <div class="main-content">
+                <div class="card-1 dos">
+                    <div class="bg">
+                        <div class="img-header pTwo-2"></div>
+                        <div class="info">
+                            <p class="title">Game Hub application</p>
+                            <p>An application has been developed using React.js, Chakra UI, and the Rawg API as a copy of the Rawg game page. 
+                                It displays all the games and genres, filtered by platforms and relevance.
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#React.JS #CSS #TYPESCRIPT #Chakra UI</p>
+                            <button type="button" class="action"><a href="https://react-proyect-drab.vercel.app/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
+                </div>
+                <div class="card-1 dos">
+                    <div class="bg">
+                        <div class="img-header pTwo-2-1"></div>
+                        <div class="info">
+                            <p class="title">Rest Country Api Challenge</p>
+                            <p>The page was developed using React, Typescript and Chakra UI. 
+                                The solution is part of a challenge from the website Frontend Mentor where 
+                                you have to use an API called RestCountries that shows information about more than 200 countries.
+                                Additionally, there are two filters: by name and by region (continent).
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#React.JS #React-Query #TYPESCRIPT #Chakra UI #Zustand</p>
+                            <button type="button" class="action"><a href="https://react-proyect-drab.vercel.app/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
+                </div>
                 <div class="card-1 uno">
                     <div class="bg">
                         <div class="img-header">
@@ -72,23 +106,7 @@
                             </div>
                             <div class="footer">
                             <p class="tag">#Angular #CSS #JAVASCRIPT #.Net #SqlServer</p>
-                            <button type="button" class="action"><a href="https://github.com/marcelogaritaf/frondendSistema/">Learn more!</a></button>
-                            </div>
-                    </div>
-                    <div class="blob"></div>
-                </div>
-                <div class="card-1 dos">
-                    <div class="bg">
-                        <div class="img-header pTwo-2"></div>
-                        <div class="info">
-                            <p class="title">Game Hub application</p>
-                            <p>An application has been developed using React.js, Chakra UI, and the Rawg API as a copy of the Rawg game page. 
-                                It displays all the games and genres, filtered by platforms and relevance.
-                            </p>
-                            </div>
-                            <div class="footer">
-                            <p class="tag">#React.JS #CSS #TYPESCRIPT #Chakra UI</p>
-                            <button type="button" class="action"><a href="https://react-proyect-drab.vercel.app/">Learn more!</a></button>
+                                <!-- <button type="button" class="action"><a href="https://github.com/marcelogaritaf/frondendSistema/">Learn more!</a></button> -->
                             </div>
                     </div>
                     <div class="blob"></div>
