adding new proyect

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             </div>
                             <div class="footer">
                             <p class="tag">#React.JS #React-Query #TYPESCRIPT #Chakra UI #Zustand</p>
-                            <button type="button" class="action"><a href="https://react-proyect-drab.vercel.app/">Learn more!</a></button>
+                            <button type="button" class="action"><a href="https://whereintheworld-mgf.netlify.app/">Learn more!</a></button>
                             </div>
                     </div>
                     <div class="blob"></div>
